add header styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,6 @@
 @import './base/normolize';
 @import './base/colors';
+@import './base/mixins';
 @import './components/buttons';
+@import './components/container';
+@import './layout/header';
