--- a/styles/main.css
+++ b/styles/main.css
@@ -61,4 +61,92 @@ a {
 .btn.outline:hover, .btn.outline:active {
   background: #ff5a30;
   color: #fff;
+}
+
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+  max-width: 1260px;
+}
+
+.header {
+  width: 100%;
+  height: 52px;
+  margin: 20px 0;
+}
+.header .header__container {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.header .header__container .nav__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+.header .header__container .nav__list .nav__item {
+  display: block;
+}
+.header .header__container .nav__list .nav__link {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 160%;
+  transition: 0.5s;
+  color: #424551;
+}
+.header .header__container .nav__list .nav__link:hover {
+  color: #ff5a30;
+}
+.header .header__container .header-contacts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 35px;
+  height: 100%;
+}
+.header .header__container .header-contacts .header-contacts__link {
+  position: relative;
+  width: -moz-min-content;
+  width: min-content;
+  margin-left: 35px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  align-items: start;
+}
+.header .header__container .header-contacts .header-contacts__link img {
+  position: absolute;
+  left: -45px;
+  width: 40px;
+  height: 100%;
+  fill: #ff5a30;
+}
+.header .header__container .header-contacts .header-contacts__link span {
+  display: block;
+  white-space: nowrap;
+  transition: 0.5s;
+  line-height: 150%;
+  color: #424551;
+}
+.header .header__container .header-contacts .header-contacts__link .link-call__title,
+.header .header__container .header-contacts .header-contacts__link .link-mail__title {
+  font-size: 14px;
+  font-weight: bold;
+}
+.header .header__container .header-contacts .header-contacts__link .link-call__tel,
+.header .header__container .header-contacts .header-contacts__link .link-mail__adr {
+  font-size: 18px;
+  font-weight: 400;
+}
+.header .header__container .header-contacts .header-contacts__link:hover .link-call__tel, .header .header__container .header-contacts .header-contacts__link:hover .link-mail__adr {
+  color: #ff5a30;
 }/*# sourceMappingURL=main.css.map */
