--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -1,4 +1,6 @@
 .btn {
+      cursor: pointer;
+      display: block;
       width: fit-content;
       text-align: center;
       border-radius: 4px;
@@ -9,17 +11,17 @@
       transition: .5s;
 
       &.l-btn {
-            padding: 40px 0;
+            padding:0 40px ;
             font-size: 16px;
             line-height: 52px;
       }
       &.m-btn{
-            padding: 32px 0;
+            padding:0 32px ;
             font-size: 14px;
             line-height: 44px;
       }
       &.sm-btn{
-            padding: 24px 0;
+            padding:0 24px ;
             font-size: 12px;
             line-height: 36px;
       }
