--- a/styles/main.css
+++ b/styles/main.css
@@ -22,6 +22,8 @@ a {
 }
 
 .btn {
+  cursor: pointer;
+  display: block;
   width: -moz-fit-content;
   width: fit-content;
   text-align: center;
@@ -33,17 +35,17 @@ a {
   transition: 0.5s;
 }
 .btn.l-btn {
-  padding: 40px 0;
+  padding: 0 40px;
   font-size: 16px;
   line-height: 52px;
 }
 .btn.m-btn {
-  padding: 32px 0;
+  padding: 0 32px;
   font-size: 14px;
   line-height: 44px;
 }
 .btn.sm-btn {
-  padding: 24px 0;
+  padding: 0 24px;
   font-size: 12px;
   line-height: 36px;
 }
