--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,4 +3,6 @@
 @import './base/mixins';
 @import './components/buttons';
 @import './components/container';
+@import './components/slider';
 @import './layout/header';
+@import './layout/hero';
