--- a/styles/main.css
+++ b/styles/main.css
@@ -430,4 +430,87 @@ a {
     display: flex;
   }
 }
+
+.video__container {
+  padding-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.video__container .video__title {
+  color: #1e212c;
+  font-size: 46px;
+  font-weight: bold;
+  line-height: 130%;
+  text-align: center;
+  margin-bottom: 24px;
+}
+
+.video__container .video__subtitle {
+  color: #787a80;
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 150%;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.video__container .video-block {
+  position: relative;
+  width: 100%;
+  max-height: 500px;
+  overflow: hidden;
+}
+
+.video__container .video-block .video-block__play {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  padding: 24px;
+  top: calc(50% - 40px);
+  left: calc(50% - 40px);
+  border-radius: 100%;
+  z-index: 100;
+  opacity: 1;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.video__container .video-block video {
+  width: 100%;
+  height: 500px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.video__container .video-block::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  z-index: 10;
+  opacity: .5;
+}
+
+.video__container .video-block.is-playing .video-block__play {
+  opacity: 0;
+}
+
+.video__container .video-block.is-playing::before {
+  opacity: 0;
+}
 /*# sourceMappingURL=main.css.map */
