add video scripts

--- a/styles/layout/_video.scss
+++ b/styles/layout/_video.scss
@@ -55,9 +55,11 @@
             &.is-playing{
                   .video-block__play{
                         opacity: 0;
+                        visibility: hidden;
                   }
                   &::before{
                         opacity: 0;
+                        visibility: hidden;
                   }
             }
       }
