--- a/styles/main.css
+++ b/styles/main.css
@@ -508,9 +508,11 @@ a {
 
 .video__container .video-block.is-playing .video-block__play {
   opacity: 0;
+  visibility: hidden;
 }
 
 .video__container .video-block.is-playing::before {
   opacity: 0;
+  visibility: hidden;
 }
 /*# sourceMappingURL=main.css.map */
