--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,6 +4,9 @@
 @import './components/buttons';
 @import './components/container';
 @import './components/slider';
+@import './components/title';
+@import './components/subtitle';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
+@import './layout/values';
