--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,7 +6,9 @@
 @import './components/slider';
 @import './components/title';
 @import './components/subtitle';
+@import './components/input';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
 @import './layout/values';
+@import './layout/requestForm';
