--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,8 +7,11 @@
 @import './components/title';
 @import './components/subtitle';
 @import './components/input';
+@import './components/services-card';
+@import './components/learn-more';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
 @import './layout/values';
 @import './layout/requestForm';
+@import './layout/services';
