--- a/styles/components/_slider.scss
+++ b/styles/components/_slider.scss
@@ -10,7 +10,7 @@
             padding-bottom: 355px;
             width: 100%;
             height: 100%;
-            background-image: url(../../assets/slide-bg.jpg);
+            background-image: url(../../assets/background/slide-bg.jpg);
 
             .slider__title {
                   color: $white;
