add portfolio section html

--- a/styles/components/_buttons.scss
+++ b/styles/components/_buttons.scss
@@ -3,6 +3,7 @@
       display: block;
       width: fit-content;
       text-align: center;
+      text-transform: uppercase;
       border-radius: 4px;
       background: $primary;
       color: $white;
