--- a/styles/components/_services-card.scss
+++ b/styles/components/_services-card.scss
@@ -1,5 +1,7 @@
 .services__item {
       display: block;
+      border-radius: 4px;
+      overflow: hidden;
 
       a {
             position: relative;
