--- a/styles/main.scss
+++ b/styles/main.scss
@@ -9,9 +9,11 @@
 @import './components/input';
 @import './components/services-card';
 @import './components/learn-more';
+@import './components/portfolio-card';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
 @import './layout/values';
 @import './layout/requestForm';
 @import './layout/services';
+@import './layout/portfolio';
