--- a/styles/layout/_hero.scss
+++ b/styles/layout/_hero.scss
@@ -5,35 +5,14 @@
       overflow: hidden;
 
       .slider__btn {
-            @include flex-col;
             display: none;
             position: absolute;
             top: 50%;
-            width: 48px;
-            height: 48px;
-            border-radius: 100%;
-            background: $white;
-            fill: $gray800;
-            transition: 0.5s;
-            svg path {
-                  transition: 0.5s;
-            }
-
-            &:hover {
-                  background: $primary;
-                  svg path {
-                        fill: $white;
-                  }
-            }
-            &.disabled {
-                  opacity: 0.5;
-                  pointer-events: none;
-            }
       }
-      #slide-to-left {
+      #slide-hero-to-left {
             left: 32px;
       }
-      #slide-to-right {
+      #slide-hero-to-right {
             right: 32px;
       }
       .hero__slider-count {
