--- a/styles/main.css
+++ b/styles/main.css
@@ -167,6 +167,47 @@ a {
   gap: 24px;
 }
 
+.slider__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 48px;
+  height: 48px;
+  border-radius: 100%;
+  background: #fff;
+  fill: #424551;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.slider__btn svg path {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.slider__btn:hover {
+  background: #ff5a30;
+}
+
+.slider__btn:hover svg path {
+  fill: #fff;
+}
+
+.slider__btn.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+
 .title {
   color: #1e212c;
   font-size: 46px;
@@ -323,6 +364,7 @@ a {
 
 .learn-more {
   margin-top: 80px;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -342,6 +384,59 @@ a {
   font-size: 28px;
   margin: 0;
   padding-right: 40px;
+}
+
+.slider__slide {
+  position: relative;
+  min-width: 390px;
+  height: 440px;
+  border-radius: 4px;
+  overflow: hidden;
+  background: #fff;
+  -webkit-box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+          box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.03), 0px 12px 10px -6px rgba(154, 156, 165, 0.04), 0px 30px 24px -10px rgba(154, 156, 165, 0.05), 0px 80px 80px -20px rgba(154, 156, 165, 0.08);
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.slider__slide img {
+  height: 345px;
+}
+
+.slider__slide .content {
+  position: absolute;
+  width: 100%;
+  height: 163px;
+  bottom: -68px;
+  background: #fff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.slider__slide .content .slide-title {
+  margin: 0;
+  margin-top: 16px;
+  font-size: 20px;
+}
+
+.slider__slide .content .slide-subtitle {
+  margin: 0;
+  margin-top: 4px;
+  font-size: 14px;
+}
+
+.slider__slide .content .slide-btn {
+  margin: auto;
+  margin-top: 30px;
+}
+
+.slider__slide:hover {
+  -webkit-box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.1), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
+          box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.1), 0px 12px 10px -6px rgba(154, 156, 165, 0.1), 0px 30px 24px -10px rgba(154, 156, 165, 0.1), 0px 80px 80px -20px rgba(154, 156, 165, 0.16);
+}
+
+.slider__slide:hover .content {
+  bottom: 0;
 }
 
 .header {
@@ -493,54 +588,16 @@ a {
 }
 
 .hero .slider__btn {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: none;
   position: absolute;
   top: 50%;
-  width: 48px;
-  height: 48px;
-  border-radius: 100%;
-  background: #fff;
-  fill: #424551;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
 }
 
-.hero .slider__btn svg path {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.hero .slider__btn:hover {
-  background: #ff5a30;
-}
-
-.hero .slider__btn:hover svg path {
-  fill: #fff;
-}
-
-.hero .slider__btn.disabled {
-  opacity: 0.5;
-  pointer-events: none;
-}
-
-.hero #slide-to-left {
+.hero #slide-hero-to-left {
   left: 32px;
 }
 
-.hero #slide-to-right {
+.hero #slide-hero-to-right {
   right: 32px;
 }
 
@@ -843,5 +900,79 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+.portfolio-container {
+  margin-top: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.portfolio-container .portfolio__title {
+  max-width: 750px;
+  text-align: start;
+}
+
+.portfolio-container .slider-btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.portfolio-container .portfolio__slider {
+  margin-top: 48px;
+  padding-bottom: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow: hidden;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  gap: 30px;
+  width: 100%;
+}
+
+.portfolio-container .portfolio__learn-more {
+  margin-top: 0;
 }
 /*# sourceMappingURL=main.css.map */
