--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,7 @@
 @import './components/services-card';
 @import './components/learn-more';
 @import './components/portfolio-card';
+@import './components/testimonials-card';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
@@ -18,3 +19,4 @@
 @import './layout/services';
 @import './layout/portfolio';
 @import './layout/clients';
+@import './layout/testimonials';
