add news section html

--- a/styles/layout/_figures.scss
+++ b/styles/layout/_figures.scss
@@ -10,7 +10,7 @@
             flex-shrink: 0;
       }
 }
-.container-figures {
+.figures-container {
       margin-top: 120px;
 
       .figures__list {
