--- a/styles/main.css
+++ b/styles/main.css
@@ -1088,6 +1088,7 @@ a {
 
 .testimonials-container .testimonials-title {
   -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
   -ms-grid-column: 1;
   grid-area: a;
   min-width: 600px;
@@ -1095,7 +1096,6 @@ a {
 
 .testimonials-container .testimonials-img {
   -ms-grid-row: 1;
-  -ms-grid-row-span: 3;
   -ms-grid-column: 2;
   grid-area: b;
   width: 495px;
@@ -1103,7 +1103,7 @@ a {
 
 .testimonials-container .testimonials-slider {
   -ms-grid-row: 2;
-  -ms-grid-column: 1;
+  -ms-grid-column: 2;
   grid-area: c;
   position: relative;
   overflow: hidden;
@@ -1216,5 +1216,105 @@ a {
   font-size: 14px;
   font-weight: normal;
   line-height: 150%;
+}
+
+.news-container {
+  margin-top: 180px;
+}
+
+.news-container .news__title {
+  margin-bottom: 60px;
+}
+
+.news-container .news__list {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 705px 495px;
+      grid-template-columns: 705px 495px;
+  -ms-grid-rows: 255px 255px;
+      grid-template-rows: 255px 255px;
+      grid-template-areas: "a b" "a c";
+  gap: 30px;
+}
+
+.news-container .news__list .news__item {
+  display: block;
+}
+
+.news-container .news__list .post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  padding: 0 24px;
+  padding-bottom: 24px;
+}
+
+.news-container .news__list .post .post__preview {
+  width: calc(100% + 48px);
+  margin: 0 -24px;
+}
+
+.news-container .news__list .post .post__title {
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 150%;
+  margin: 0;
+  margin-top: 24px;
+}
+
+.news-container .news__list .post .post__meta {
+  margin-top: 12px;
+}
+
+.news-container .news__list .post .post__meta, .news-container .news__list .post .post__meta span {
+  color: #787a80;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
+}
+
+.news-container .news__list .post .post__meta svg {
+  position: relative;
+  bottom: -3px;
+}
+
+.news-container .news__list .post .post__text {
+  color: #424551;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 160%;
+  margin-top: 16px;
+}
+
+.news-container .news__list .news__item:nth-child(1) {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: a;
+}
+
+.news-container .news__list .news__item:nth-child(2) {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: b;
+}
+
+.news-container .news__list .news__item:nth-child(3) {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: c;
 }
 /*# sourceMappingURL=main.css.map */
