--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 * {
   margin: 0;
@@ -257,7 +258,7 @@ a {
   line-height: 150%;
 }
 
-.input-block input {
+.input-block input, .input-block textarea {
   width: 100%;
   padding: 11px 16px;
   font-size: 14px;
@@ -267,7 +268,7 @@ a {
   outline: none;
 }
 
-.input-block input:focus {
+.input-block input:focus, .input-block textarea:focus {
   border: 1px solid #ff5a30;
 }
 
@@ -1316,5 +1317,151 @@ a {
   -ms-grid-row: 2;
   -ms-grid-column: 2;
   grid-area: c;
+}
+
+.application {
+  margin-top: 120px;
+  background-image: url(../../assets/background/application-bg.jpg);
+}
+
+.application .application-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.application .application-container .aplication__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 495px;
+  height: 666px;
+  border-radius: 4px;
+  padding: 48px 40px;
+  margin: 80px 0;
+  background: #fff;
+  -webkit-box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(30, 33, 44, 0.08), 0px 26px 24px -10px rgba(30, 33, 44, 0.1), 0px 60px 80px -20px rgba(30, 33, 44, 0.16);
+          box-shadow: 0px 4px 4px -4px rgba(30, 33, 44, 0.05), 0px 12px 10px -6px rgba(30, 33, 44, 0.08), 0px 26px 24px -10px rgba(30, 33, 44, 0.1), 0px 60px 80px -20px rgba(30, 33, 44, 0.16);
+}
+
+.application .application-container .aplication__form .form__title {
+  font-size: 28px;
+}
+
+.application .application-container .aplication__form .form__inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 20px;
+}
+
+.application .application-container .aplication__form .form__inputs .form__input {
+  width: 100%;
+}
+
+.application .application-container .aplication__form .form__inputs textarea {
+  height: 66px;
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 12px;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  /* стили при наведении курсора на checkbox */
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox + label {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox + label::before {
+  content: "";
+  margin-top: 5px;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox:checked + label::before {
+  border-color: #ff5a30;
+  background-color: #ff5a30;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox .custom-checkbox:not(:disabled):not(:checked) + label:hover::before {
+  border-color: #ff5a30;
+}
+
+.application .application-container .aplication__form .form__inputs .form__checkbox label {
+  color: #424551;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
 }
 /*# sourceMappingURL=main.css.map */
