--- a/styles/main.css
+++ b/styles/main.css
@@ -1464,4 +1464,271 @@ a {
   font-weight: normal;
   line-height: 150%;
 }
+
+footer {
+  background: #1e212c;
+}
+
+.footer-container {
+  padding: 80px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__top {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer__top .footer__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 493px;
+}
+
+.footer__top .footer__info .info__logo {
+  width: 142px;
+  height: 24px;
+  margin-right: 60px;
+}
+
+.footer__top .footer__info .info__social {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 16px;
+}
+
+.footer__top .footer__info .info__social .social__item {
+  display: block;
+}
+
+.footer__top .footer__info .info__social .social__item g {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer__top .footer__info .info__social .social__item:hover g {
+  opacity: 1;
+}
+
+.footer__top .footer__info .info__text {
+  opacity: 0.6;
+  color: #fff;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
+  margin-top: 24px;
+}
+
+.footer__top .footer__subscribe {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  max-width: 495px;
+}
+
+.footer__top .footer__subscribe .subscribe__title {
+  color: #fff;
+  font-size: 24px;
+}
+
+.footer__top .footer__subscribe .subscribe__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer__top .footer__subscribe .subscribe__input input {
+  width: 364px;
+  color: #9a9ca5;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
+  padding: 10px 16px;
+  background: rgba(255, 255, 255, 0.12);
+  outline: none;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.footer__top .footer__subscribe .subscribe__input input:focus {
+  border: 1px solid #ff5a30;
+}
+
+.footer__top .footer__subscribe .subscribe__input .subscribe__btn {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+
+.footer__top .footer__subscribe .subscribr__text {
+  margin-top: 16px;
+  opacity: 0.6;
+  color: #fff;
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 150%;
+}
+
+.footer__bottom {
+  margin-top: 50px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  gap: 125px;
+}
+
+.footer__bottom h3 {
+  color: #fff;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-align: start;
+  margin-bottom: 13px;
+}
+
+.footer__bottom p,
+.footer__bottom a {
+  color: #9a9ca5;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 160%;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  margin-bottom: 4px;
+}
+
+.footer__bottom a:hover {
+  color: #fff;
+}
+
+.footer__bottom .footer__contacts span {
+  color: #fff;
+}
+
+.footer__bottom .footer__about,
+.footer__bottom .footer__expirience {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.footer__copyright {
+  margin-top: 60px;
+  color: #fff;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+  font-size: 12px;
+}
 /*# sourceMappingURL=main.css.map */
