add scroll to top button

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,7 @@
 @import './components/learn-more';
 @import './components/portfolio-card';
 @import './components/testimonials-card';
+@import './components/scroll-top';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
