--- a/styles/base/_normolize.scss
+++ b/styles/base/_normolize.scss
@@ -8,6 +8,9 @@
       text-decoration: none;
       font-family: "Ubuntu", sans-serif;
 }
+body{
+      position: relative;
+}
 img{
       width: 100%;
       height: 100%;object-fit: contain;
