--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,10 @@
   font-family: "Ubuntu", sans-serif;
 }
 
+body {
+  position: relative;
+}
+
 img {
   width: 100%;
   height: 100%;
@@ -494,6 +498,51 @@ a {
   font-size: 14px;
   font-weight: normal;
   line-height: 150%;
+}
+
+.scroll-top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
+  gap: 18px;
+  position: fixed;
+  bottom: 80px;
+  right: calc((100% - 1230px) / 2);
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: .5s;
+  transition: .5s;
+  z-index: 100;
+}
+
+.scroll-top .scroll-top__text {
+  color: #000;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
+}
+
+.scroll-top .scroll-top__btn {
+  padding: 15px 12px;
+  line-height: normal;
+}
+
+.scroll-top.active {
+  opacity: 1;
+  visibility: visible;
 }
 
 .header {
