add page title section styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,6 +12,7 @@
 @import './components/portfolio-card';
 @import './components/testimonials-card';
 @import './components/scroll-top';
+@import './components/page-title';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
