--- a/styles/base/_normolize.scss
+++ b/styles/base/_normolize.scss
@@ -8,13 +8,14 @@
       text-decoration: none;
       font-family: "Ubuntu", sans-serif;
 }
-body{
+body {
       position: relative;
 }
-img{
+img {
       width: 100%;
-      height: 100%;object-fit: contain;
+      height: 100%;
+      object-fit: contain;
 }
 a {
-    text-decoration:none
+      text-decoration: none;
 }
