--- a/styles/main.css
+++ b/styles/main.css
@@ -545,6 +545,68 @@ a {
   visibility: visible;
 }
 
+.page-title__container {
+  margin-top: 80px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+}
+
+.page-title__container .breadcrumb {
+  color: #9a9ca5;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 150%;
+}
+
+.page-title__container .breadcrumb a {
+  color: #424551;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.page-title__container .breadcrumb a:hover {
+  color: #ff5a30;
+}
+
+.page-title__container .page-title__title {
+  margin-top: 40px;
+  color: #1e212c;
+  font-size: 72px;
+  font-weight: bold;
+  line-height: 130%;
+  letter-spacing: 1px;
+}
+
+.page-title__container .page-title__subtitle {
+  color: #787a80;
+  font-size: 20px;
+  max-width: 600px;
+  text-align: start;
+}
+
+.page-title__container .page-title__background {
+  position: absolute;
+  right: 0;
+  top: -20px;
+  width: 975px;
+  height: 600px;
+  z-index: -1;
+}
+
 .header {
   width: 100%;
   height: 52px;
