add offer section styles

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,6 +13,7 @@
 @import './components/testimonials-card';
 @import './components/scroll-top';
 @import './components/page-title';
+@import './components/offer-section';
 @import './layout/header';
 @import './layout/hero';
 @import './layout/video';
