--- a/styles/main.css
+++ b/styles/main.css
@@ -443,6 +443,64 @@ a {
   z-index: -1;
 }
 
+.offer__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 300px;
+}
+.offer__container img {
+  max-width: 705px;
+}
+.offer__container .offer__content {
+  max-width: 420px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  align-items: start;
+}
+.offer__container .offer__content .offer__list .offer__item {
+  padding-left: 45px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: start;
+  max-height: 85px;
+  overflow: hidden;
+  transition: 0.5s;
+}
+.offer__container .offer__content .offer__list .offer__item .item__title {
+  text-align: start;
+  font-size: 28px;
+  margin-bottom: 12px;
+}
+.offer__container .offer__content .offer__list .offer__item .item__subtitle {
+  text-align: start;
+  font-size: 16px;
+  margin-bottom: 24px;
+}
+.offer__container .offer__content .offer__list .offer__item::after, .offer__container .offer__content .offer__list .offer__item::before {
+  content: "";
+  position: absolute;
+  left: 0px;
+  top: 20px;
+  width: 24px;
+  height: 2px;
+  transition: 0.5s;
+  background: #ff5a30;
+}
+.offer__container .offer__content .offer__list .offer__item.active {
+  max-height: 200px;
+}
+.offer__container .offer__content .offer__list .offer__item.active::after {
+  rotate: 90deg;
+}
+
 .header {
   width: 100%;
   height: 52px;
