add offer section scripts

--- a/styles/components/_offer-section.scss
+++ b/styles/components/_offer-section.scss
@@ -13,6 +13,7 @@
 
             .offer__list {
                   .offer__item {
+                        cursor: pointer;
                         padding-left: 45px;
                         position: relative;
                         @include flex-col;
