add steps section html

--- a/styles/components/_offer-section.scss
+++ b/styles/components/_offer-section.scss
@@ -13,7 +13,7 @@
 
             .offer__list {
                   .offer__item {
-                        cursor: pointer;
+                        cursor: ™;
                         padding-left: 45px;
                         position: relative;
                         @include flex-col;
