--- a/styles/main.css
+++ b/styles/main.css
@@ -463,7 +463,7 @@ a {
   align-items: start;
 }
 .offer__container .offer__content .offer__list .offer__item {
-  cursor: pointer;
+  cursor: ™;
   padding-left: 45px;
   position: relative;
   display: flex;
